# Digital_Bargeld-akono

./: .gitignore  .gitmodules  README  build.gradle.kts  settings.gradle.kts
akono/: build.gradle.kts  proguard-rules.pro
akono/src/androidTest/java/akono/: InstrumentedAkonoTests.kt
akono/src/main/: AndroidManifest.xml
akono/src/main/cpp/: CMakeLists.txt  akono-jni.cpp
akono/src/main/java/akono/: AkonoJni.kt
